Keep font-display: swap for Speed Index and lock ScreenTextFit height to prevent layout shifts

--- a/src/app.css
+++ b/src/app.css
@@ -8,7 +8,7 @@
 	font-family: "Bodoni Moda";
 	font-style: normal;
 	font-weight: 400 900;
-	font-display: block;
+	font-display: swap;
 	src: url("/fonts/bodoni-moda.woff2") format("woff2");
 }
 
@@ -16,7 +16,7 @@
 	font-family: "Bodoni Moda";
 	font-style: italic;
 	font-weight: 400 900;
-	font-display: block;
+	font-display: swap;
 	src: url("/fonts/bodoni-moda-italic.woff2") format("woff2");
 }
 
@@ -24,7 +24,7 @@
 	font-family: "Libre Bodoni";
 	font-style: normal;
 	font-weight: 400 700;
-	font-display: block;
+	font-display: swap;
 	src: url("/fonts/libre-bodoni.woff2") format("woff2");
 }
 
@@ -32,7 +32,7 @@
 	font-family: "Libre Bodoni";
 	font-style: italic;
 	font-weight: 400 700;
-	font-display: block;
+	font-display: swap;
 	src: url("/fonts/libre-bodoni-italic.woff2") format("woff2");
 }
 
@@ -43,7 +43,7 @@
 	font-style: normal;
 	font-weight: 100 900;
 	font-stretch: 75% 125%;
-	font-display: block;
+	font-display: swap;
 	src: url("/fonts/athene-voyage.woff2") format("woff2");
 }
 
@@ -52,7 +52,7 @@
 	font-style: italic;
 	font-weight: 100 900;
 	font-stretch: 75% 125%;
-	font-display: block;
+	font-display: swap;
 	src: url("/fonts/athene-voyage.woff2") format("woff2");
 }
 
